syntax = "proto3";

package health;
option go_package = "./health";
// option go_package = "github.com/cclhsu/gin-grpc-gorm/health";

// import "google/protobuf/empty.proto";
// import "google/protobuf/field_mask.proto";


service HealthService {
  rpc IsHealthy(HealthRequest) returns (HealthResponse);
  rpc IsALive(HealthRequest) returns (HealthResponse);
  rpc IsReady(HealthRequest) returns (HealthResponse);
}

enum ServingStatus {
  UNKNOWN = 0;
  SERVING = 1;
  NOT_SERVING = 2;
}

message HealthRequest {
  string service = 1;
  // google.protobuf.Empty empty = 2; // Use google.protobuf.Empty for an empty
  // request
}

message HealthResponse {
  ServingStatus status = 1;
  // google.protobuf.FieldMask fieldMask = 2; // Use google.protobuf.FieldMask
  // for specifying field masks
}
